--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <main>
-        <h2>Marcoandres Herrera</h2>
-    </main>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <title>Portafolio web</title>
+    </head>
+    <body>
+        <main>
+            <header class="header">
+                <img src="" alt="" class="header__logo">
+            </header>
+            <section class="infoPersonal">
+                <article class="infoPersonal__contenido">
+                    <h2 class="infoPersonal__titulo">Marcoandres Herrera</h2>
+                    <h3 class="infoPersonal__profeciones">Web developer and learn engenier software</h3>
+                    <p class="infoPersonal__texto"></p>
+                    <div class="infoPersonal__redesSociales">
+                        <a href="">
+                            <img src="" alt="">
+                        </a>
+                        <a href="">
+                            <img src="" alt="">
+                        </a>
+                        <a href="">
+                            <img src="" alt="">
+                        </a>
+                        <a href="">
+                            <img src="" alt="">
+                        </a>
+                    </div>
+                </article>
+                <figure class="infoPersonal__foto-figure">
+                    <img src="./img/pefil_imgen.jpeg" alt="" class="infoPersonal__foto-img">
+                </figure>
+            </section>
+            <section class="descriptionSobreMi">
+                <h3 class="descriptionSobreMi__titulo">About me</h3>
+                <p class="descriptionSobreMi__texto">description</p>
+            </section>
+            <section class="skillsMios">
+                <article class="skillMio__contenido">
+                    <img src="" alt="" class="skillMio__img">
+                    <h3 class="skillMio__titulo">Frontend developer</h3>
+                    <p class="skillMio__text">Desarrollar sites web and web apps</p>
+                    <div class="skillMio__primeraParte">
+                        <h4 class="skillMio__primeraParte-subTitulo">Leaguagues I know</h4>
+                        <p class="skillMio__primeraParte-text">HTML,CSS,GIT,JS</p>
+                    </div>
+                    <div class="skillMio__segundaParte">
+                        <h4 class="skillMio__segundaParte-subTitulo"></h4>
+                        <p class="skillMio__segundaParte-text"></p>
+                    </div>
+                </article>
+            </section>
+            <section class="Proyectos">
+                <article>
+                                
+                </article>
+            </section>
+        </main>
+
+    </body>
 </html>
