Segundo avance commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </section>
             <section class="descriptionSobreMi">
                 <h3 class="descriptionSobreMi__titulo">About me</h3>
-                <p class="descriptionSobreMi__texto">description</p>
+                <p class="descriptionSobreMi__texto">I'm Marcoandres, I'm  18 years old and I'm student of enginnier software but actually I'm web developer </p>
             </section>
             <section class="skillsMios">
                 <article class="skillMio__contenido">
@@ -58,9 +58,18 @@
                 </article>
             </section>
             <section class="Proyectos">
-                <article>
-                                
-                </article>
+                <h2>Proyectos</h2>
+                <a href="" class="proyecto__a">
+                    <article class="proyecto__conteiner">
+                        <h2 class="proyecto__conteiner-titulo">Aereolinea</h2>
+                        <img src="" alt="" class="proyecto__conteiner-img">
+                        <div class="proyecto_descripcion">
+                            <h3 class="proyecto__descripcion-subtitulo">Descripcion:</h3>
+                            <p class="proyecto__descripcion-text">Este es un proyecto que simula la </p> 
+                        </div>
+                                  
+                    </article>
+                </a>
             </section>
         </main>
 
