--- a/index.html
+++ b/index.html
@@ -45,15 +45,20 @@
             <section class="skillsMios">
                 <article class="skillMio__contenido">
                     <img src="" alt="" class="skillMio__img">
-                    <h3 class="skillMio__titulo">Frontend developer</h3>
-                    <p class="skillMio__text">Desarrollar sites web and web apps</p>
                     <div class="skillMio__primeraParte">
-                        <h4 class="skillMio__primeraParte-subTitulo">Leaguagues I know</h4>
-                        <p class="skillMio__primeraParte-text">HTML,CSS,GIT,JS</p>
+                        <h3 class="skillMio__primeraParte-subTitulo">Frontend developer</h3>
+                        <p class="skillMio__primerParte-text">Desarrollar sites web and web apps</p>
                     </div>
                     <div class="skillMio__segundaParte">
-                        <h4 class="skillMio__segundaParte-subTitulo"></h4>
-                        <p class="skillMio__segundaParte-text"></p>
+                        <h4 class="skillMio__segundaParte-subTitulo">Leaguagues I know:</h4>
+                        <p class="skillMio__segundaParte-text">HTML,CSS,GIT,JS</p>
+                    </div>
+                    <div class="skillMio__tercerParte">
+                        <h4 class="skillMio__terceParte-subTitulo">Dev Tools:</h4>
+                        <p class="skillMio__tercerParte-text">
+                            Github<br>
+                            React js <br>
+                        </p>
                     </div>
                 </article>
             </section>
@@ -71,6 +76,17 @@
                     </article>
                 </a>
             </section>
+            <footer>
+                <p>Frase de aprendisaje como seguire aprendeiendo para mejorar</p>
+            </footer>
+            <div class="conteiner">
+                <div class="bloque">1</div>
+                <div class="bloque">2</div>
+                <div class="bloque">3</div>
+                <div class="bloque">4</div>
+                <div class="bloque">5</div>
+                <div class="bloque">6</div>
+            </div>
         </main>
 
     </body>
