Estructura incial de la cabecera

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <header class="header">
                 <img src="" alt="" class="header__logo">
             </header>
+            <div class="cabecera">
+
+            </div>
             <section class="infoPersonal">
                 <article class="infoPersonal__contenido">
                     <h2 class="infoPersonal__titulo">Marcoandres Herrera</h2>
